Added initial files for client page

--- a/public/index.html
+++ b/public/index.html
@@ -251,7 +251,7 @@ desired effect
         <!-- Optionally, you can add icons to the links -->
         <li><a href="#" ui-sref="overview"><i class="fa fa-link"></i> <span>Calendar</span></a></li>
         <li><a href="#" ui-sref="manage"><i class="fa fa-link"></i> <span>Patent Manager</span></a></li>
-        <li><a href="#"><i class="fa fa-link"></i> <span>Clients</span></a></li>
+        <li><a href="#" ui-sref="clients"><i class="fa fa-link"></i> <span>Clients</span></a></li>
         <li><a href="#"><i class="fa fa-link"></i> <span>Template Management</span></a></li>
         <li><a href="#"><i class="fa fa-link"></i> <span>Invoice Management</span></a></li>
         <li><a href="#"><i class="fa fa-link"></i> <span>Logout</span></a></li>
