Added Client Details Page

--- a/public/js/patentClient/newClientForm.html
+++ b/public/js/patentClient/newClientForm.html
@@ -4,7 +4,7 @@
         <div class="form-group">
           <label class="col-sm-2 control-label">Client ID</label>
           <div class="col-sm-2">
-            <input class="form-control" placeholder="Client ID" ng-model="vm.client._id">
+            <input class="form-control" placeholder="Client ID" ng-model="vm.client.clientNumber">
           </div>
         </div>
         <!-- English & Chinese Names -->
