Replaced table with UI-grid for patentManager page

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Multiselect CSS/JS -->
   <script type="text/javascript" src="src/components/lodash/dist/lodash.min.js"></script>
   <script type="text/javascript" src="src/components/angularjs-dropdown-multiselect/dist/angularjs-dropdown-multiselect.min.js"></script>
+  <!-- Ui-Grid -->
+  <link rel="stylesheet" type="text/css" href="src/components/angular-ui-grid/ui-grid.min.css">
+  <script src="src/components/angular-ui-grid/ui-grid.min.js"></script>
+
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/custom.css">
 </head>
