--- a/public/js/patentManager/patentDetails.html
+++ b/public/js/patentManager/patentDetails.html
@@ -219,18 +219,23 @@
       </uib-accordion>
       <div class="eventTimeline" ng-show="vm.eventHistory && vm.eventHistory.length > 0">
         <uib-accordion close-others="false">
-          <uib-accordion-group ng-repeat="event in vm.eventHistory" is-open="true" heading="{{event.eventName}}   {{event.eventDeadline | date:'MM/dd/yyyy'}}">
+          <uib-accordion-group ng-repeat="event in vm.eventHistory" ng-disabled="event.completed" is-open="true" heading="{{event.eventName}}      {{event.eventDeadline | date:'MM/dd/yyyy'}}" >
              <div class="row">
-               <label class="col-sm-1">Note:</label>
+               <label class="col-sm-2">Note:</label>
                <p style="width:100%;display:inline;">{{event.eventNote}}</p>
              </div>
              <div class="row">
-               <label class="col-sm-1 control-label">Emails:</label>
+               <label class="col-sm-2 control-label">Emails:</label>
                <p style="width:100%;display:inline;" ng-repeat="email in event.notificationEmails"> {{email}} | </p>
              </div>
              <div class="row">
-               <label class="col-sm-1 control-label">Dates:</label>
+               <label class="col-sm-2 control-label">Dates:</label>
                <p style="width:100%;display:inline;" ng-repeat="date in event.notificationDates"> {{date | date:"MM/dd/yyyy"}} | </p>
+             </div>
+             <div class="row" style="margin-top:5px">
+               <button class="btn-success form-control" ng-show="event.completed" >Completed</button>
+               <button class="btn-primary form-control" ng-show="!event.completed" ng-click="vm.completeEvent($index)">Complete Event</button>
+               <button class="btn-danger form-control"  ng-click="vm.deleteEvent($index)">Delete Event</button>
              </div>
           </uib-accordion-group>
         </uib-accordion>
