Added pagination to patentManager grid

--- a/public/js/patentManager/patentManager.html
+++ b/public/js/patentManager/patentManager.html
@@ -7,7 +7,7 @@
         </div>
         <!-- /.box-header -->
         <div class="box-body">
-          <div ui-grid="vm.gridOptions" class="myGrid"></div>
+          <div ui-grid="vm.gridOptions" ui-grid-pagination ui-grid-resize-columns ng-if="vm.gridOptions" class="myGrid"></div>
       </div>
       <!-- /.box-body -->
       </div>
