Added initial files for email/invoice templating

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- Ui-Grid -->
   <link rel="stylesheet" type="text/css" href="src/components/angular-ui-grid/ui-grid.min.css">
   <script src="src/components/angular-ui-grid/ui-grid.min.js"></script>
+  <!-- ngFileUpload -->
+  <script src="src/components/ng-file-upload/ng-file-upload.min.js"></script>
 
 
   <!-- Custom CSS -->
@@ -258,7 +260,7 @@ desired effect
         <li><a href="#" ui-sref="manage"><i class="fa fa-link"></i> <span>Patent Manager</span></a></li>
         <li><a href="#" ui-sref="clients"><i class="fa fa-link"></i> <span>Clients</span></a></li>
         <li><a href="#" ui-sref="emailTemplates"><i class="fa fa-link"></i> <span>Email Template Management</span></a></li>
-        <li><a href="#"><i class="fa fa-link"></i> <span>Invoice Management</span></a></li>
+        <li><a href="#" ui-sref="invoiceTemplates"><i class="fa fa-link"></i> <span>Invoice Management</span></a></li>
         <li><a href="#"><i class="fa fa-link"></i> <span>Logout</span></a></li>
         <li class="treeview" style="display:none">
           <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span> <i class="fa fa-angle-left pull-right"></i></a>
