--- a/public/js/patentManager/patentDetails.html
+++ b/public/js/patentManager/patentDetails.html
@@ -162,22 +162,31 @@
         </div>
         <!-- Status End -->
         <hr>
+        <hr>
         <!-- Edit/Cancel Button -->
-        <div class="form-group" ng-show="!vm.editEnabled">
-          <div class="col-sm-offset-4 col-sm-6">
+        <div class="form-group">
+          <div class="col-sm-3" ng-disabled="vm.editEnabled">
             <button class="btn btn-info form-control btn-xs" ng-click="vm.enableEdit()"> Edit </button>
+          </div>
+          <div class="col-sm-3">
+            <button class="btn btn-info form-control btn-xs" ng-click="vm.invoice()"> Invoice </button>
+          </div>
+          <div class="col-sm-3">
+            <button class="btn btn-info form-control btn-xs" ng-click="vm.notify()"> Notify </button>
+          </div>
+          <div class="col-sm-3">
+            <button class="btn btn-info form-control btn-xs" ng-click="vm.delete()"> Delete </button>
           </div>
         </div>
         <div class="form-group" ng-show="vm.editEnabled">
-          <div class="col-sm-offset-4 col-sm-6">
+          <div class="col-sm-3">
             <button class="btn btn-danger form-control btn-xs" ng-click="vm.cancelEdit()"> Cancel </button>
           </div>
         </div>
         <!-- Edit/Cancel Button End -->
-        <hr>
         <!-- Save Button -->
         <div class="form-group" ng-show="vm.editEnabled">
-          <div class="col-sm-offset-4 col-sm-6">
+          <div class="col-sm-3">
             <button class="btn btn-success form-control btn-xs" ng-click="vm.save()"> Save </button>
           </div>
         </div>
