--- a/public/js/patentClient/patentClient.html
+++ b/public/js/patentClient/patentClient.html
@@ -12,16 +12,20 @@
             <tr>
               <th class="col-xs-1">Chinese Name</th>
               <th class="col-xs-1">English Name</th>
-              <th class="col-xs-4" ng-click="vm.changeOrder('englishTitle')">Address</th>
-              <th class="col-xs-4" ng-click="vm.changeOrder('chineseTitle')">Telephone</th>
+              <th class="col-xs-2">Chinese Address</th>
+              <th class="col-xs-2">English Address</th>
+              <th class="col-xs-2">Telephone</th>
+              <th class="col-xs-4">Comments</th>
             </tr>
             </thead>
             <tbody>
             <tr ng-repeat='client in vm.clients'>
               <td><a href="#/clients/{{client._id}}">{{client.chineseName}}</a></td>
               <td>{{client.englishName}}</td>
-              <td>{{client.address}}</td>
+              <td>{{client.chineseAddress}}</td>
+              <td>{{client.englishAddress}}</td>
               <td>{{client.telephone}}</td>
+              <td>{{client.comment}}</td>
             </tr>
           </tbody>
         </table>
