cleaned up front page

--- a/public/js/auth/login/login.html
+++ b/public/js/auth/login/login.html
@@ -5,7 +5,7 @@
   <div class="alert alert-danger" ng-show="vm.error"> {{vm.error}} </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
-    <p class="login-box-msg">Sign in to start your session</p>
+    <p class="login-box-msg">Demo Login: root@root.com <br/> Demo Password: root</p>
 
     <form>
       <div class="form-group has-feedback">
