--- a/public/js/patentEmailTemplate/patentEmailTemplate.html
+++ b/public/js/patentEmailTemplate/patentEmailTemplate.html
@@ -1,6 +1,6 @@
 <div class="row" style="padding-top:10px">
   <div class="col-xs-3">
-    <table class="table table-bordered table-striped" style="border:2px solid black;margin-left:15px;">
+    <table class="table table-bordered table-striped" style="margin-left:15px;">
       <thead>
         <tr>
           <th>FieldID</th>
