Added csv export to grids

--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,9 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <script src="src/components/angular-ui-grid/ui-grid.min.js"></script>
   <!-- ngFileUpload -->
   <script src="src/components/ng-file-upload/ng-file-upload.min.js"></script>
+  <!-- pdfMake -->
+  <script src="src/components/pdfmake/build/pdfmake.js"></script>
+  <script src="src/components/pdfmake/build/vfs_fonts.js"></script>
 
 
   <!-- Custom CSS -->
