--- a/public/js/patentCalendar/calendar.html
+++ b/public/js/patentCalendar/calendar.html
@@ -1,3 +1,7 @@
 <section class="content" ui-view>
-  <div ui-calendar="vm.config.calendar" ng-model="vm.eventSources"></div>
+  <div class="row">
+    <div ui-calendar="vm.config.calendar" ng-model="vm.eventSources"></div>
+  </div>
+  <div ui-grid="vm.gridOptions" ui-grid-exporter ui-grid-pagination class="myGrid"></div>
+
 </section>
